Return multiple json records wheen getting loans CIRC-596